<resources>
    <string name="app_name">PeopleInRoom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_capital">LAST NAME</string>
    <string name="age_capital">AGE</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="are_you_sure">Are you sure you want to delete everything?</string>
    <string name="delete_question">Delete everything?</string>
    <string name="nabiullin">Nabiullin</string>
    <string name="azat">Azat</string>
    <string name="_28">28</string>
    <string name="_1">1</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="name">NAME</string>
    <string name="id">ID</string>
</resources>